<resources>
    <string name="app_name">Harvest Hero</string>

    <string name="home">Home</string>
    <string name="my_plants">My Plants</string>
    <string name="plantpedia">Plantpedia</string>
    <string name="fertilize">Fertilize</string>
    <string name="sick">Sick</string>
    <string name="water">Water</string>
    <string name="greeting">Hello, Gardener!</string>
    <string name="sub_greeting">Your plants need you today!</string>
    <string name="search">Search …</string>
    <string name="ed_name_hint">Plant Name</string>
    <string name="add_this_plant">Add this plant</string>
    <string name="add_open_gallery">Choose from gallery</string>
    <string name="choose_plant_type">Choose Plant Type</string>
    <string name="choose_plant_current_growth">Choose Plant Current Growth</string>
    <string name="status">Status</string>
    <string name="check_growth_phase">Check growth phase</string>
    <string name="last_fertilized">Last Fertilized</string>
    <string name="water_plant">Water plant</string>
    <string name="last_watered">Last Watered</string>
    <string name="plant_health">Plant Health</string>
    <string name="image_of_your_plant">Image of Your Plant</string>

    <string name="plant_singular">%1$d Plant</string>
    <string name="plant_plural">%1$d Plants</string>

    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="watered">Watered</string>
    <string name="fertilized">Fertilized</string>
    <string name="not_yet">Not Yet</string>
    <string name="healthy">Healthy</string>

</resources>