<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_back_detail"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/background"
            android:drawableTint="#000151"
            app:icon="@drawable/back"
            app:iconSize="35dp"
            app:iconTint="#151C51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_delete_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/sick"
            android:fontFamily="@font/gabarito_regular"
            android:text="Delete"
            app:icon="@drawable/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_detail_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="4dp"
            app:cardCornerRadius="20sp"
            app:layout_constraintTop_toBottomOf="@+id/btn_delete_detail">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_plant_detail"
                    android:layout_width="0dp"
                    android:layout_height="256dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/image_of_your_plant"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hhicon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_plant_name_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/gabarito_bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_plant_detail"
                    tools:text="Plant Name" />

                <TextView
                    android:id="@+id/tv_plant_type_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gabarito_regular"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_plant_name_detail"
                    app:layout_constraintTop_toBottomOf="@+id/tv_plant_name_detail"
                    tools:text="PlantType" />

                <Button
                    android:id="@+id/btn_check_growth_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="@font/gabarito_regular"
                    android:text="@string/check_growth_phase"
                    app:icon="@drawable/photo_album"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_tv_growth_item_detail"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider_detail"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    app:dividerColor="#D5D5D5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_check_growth_detail" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_tv_growth_item_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    app:cardBackgroundColor="@color/secondary_containera"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp"
                    app:contentPaddingLeft="8dp"
                    app:contentPaddingRight="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_plant_type_detail">

                    <TextView
                        android:id="@+id/tv_growth_phase_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gabarito_regular"
                        android:textColor="@color/water"
                        android:textSize="18sp"
                        android:textStyle="normal"
                        tools:text="Vegetative growth" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_status_title_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/gabarito_bold"
                    android:text="@string/status"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintStart_toStartOf="@+id/btn_check_growth_detail"
                    app:layout_constraintTop_toBottomOf="@+id/divider_detail" />

                <TextView
                    android:id="@+id/tv_health_title_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/gabarito_regular"
                    android:text="@string/plant_health"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="@+id/tv_status_title_detail"
                    app:layout_constraintTop_toBottomOf="@+id/tv_status_title_detail" />

                <TextView
                    android:id="@+id/tv_health_time_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gabarito_regular"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    app:layout_constraintStart_toStartOf="@+id/tv_health_title_detail"
                    app:layout_constraintTop_toBottomOf="@+id/tv_health_title_detail"
                    tools:text="Healthy" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_detail_water"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_health_time_detail">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_water_title_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="24dp"
                            android:fontFamily="@font/gabarito_regular"
                            android:text="@string/last_watered"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@android:color/darker_gray"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_water_time_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="24dp"
                            android:fontFamily="@font/gabarito_regular"
                            android:textAppearance="@android:style/TextAppearance.Medium"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/tv_water_title_detail"
                            app:layout_constraintTop_toBottomOf="@+id/tv_water_title_detail"
                            app:layout_constraintVertical_bias="0.0"
                            tools:text="3 Days ago" />

                        <Button
                            android:id="@+id/btn_water_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:backgroundTint="@color/water"
                            android:fontFamily="@font/gabarito_regular"
                            android:text="@string/water_plant"
                            app:icon="@drawable/water"
                            app:layout_constraintBottom_toBottomOf="@+id/tv_water_time_detail"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/tv_water_title_detail" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_detail_fertilizer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="32dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_detail_water">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_fertilize_title_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="24dp"
                            android:fontFamily="@font/gabarito_regular"
                            android:text="@string/last_fertilized"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@android:color/darker_gray"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_fertilize_time_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="24dp"
                            android:fontFamily="@font/gabarito_regular"
                            android:textAppearance="@android:style/TextAppearance.Medium"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/tv_fertilize_title_detail"
                            app:layout_constraintTop_toBottomOf="@+id/tv_fertilize_title_detail"
                            app:layout_constraintVertical_bias="0.0"
                            tools:text="3 Days ago" />

                        <Button
                            android:id="@+id/btn_fertilize_detail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/gabarito_regular"
                            android:text="@string/fertilize"
                            app:icon="@drawable/fertilizer"
                            app:layout_constraintBottom_toBottomOf="@+id/tv_fertilize_time_detail"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/tv_fertilize_title_detail"
                            app:layout_constraintVertical_bias="1.0" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</FrameLayout>
